--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <div id="root"></div>
   </body>
 </html>
